fix visual bug where 'Add' in category wrapped to the next line
git-svn-id: https://svn.participatoryculture.org/svn/channelguide2/trunk@1724 be7adf91-e322-0410-8f47-e6edb61c52aa

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1350,13 +1350,11 @@ margin: 0 !important;
 
 .channel-in-category .actions a {
     font-size: 90%;
-}
-
-.channel-in-category .actions a {
     background: no-repeat left top;
     line-height: 17px;
     color: #2E6195;
     font-weight: bold;
+    width: 100px;
 }
 
 .channel-in-category .actions .icon {
